Small styling tweaks

--- a/helpers/react/DynamicDialog/DropdownSelect.css
+++ b/helpers/react/DynamicDialog/DropdownSelect.css
@@ -54,7 +54,7 @@
 	transform: translateY(-50%);
 }
 
-/* The dropdown menu, that contains the -options. */
+/* The dropdown menu, that contains the options. */
 .dropdown-select-dropdiv {
 	position: absolute;
 	top: 100%;
