--- a/helpers/react/DynamicDialog/DynamicDialog.css
+++ b/helpers/react/DynamicDialog/DynamicDialog.css
@@ -426,12 +426,13 @@
         font-family: system-ui;
     }
 
-    .ui-button:hover {
-        background-color: var(--bg-alt-color);
-        color: var(--fg-alt-color);
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    /* Hover style for ui-button - though don't apply to default-button as well */
+    .ui-button:hover:not(.default-button) {
+        /* background-color: var(--bg-alt-color); */
+        /* color: var(--fg-alt-color); */
+        /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); */
+        filter: brightness(95%);
     }
-
     .default-button {
         background-color: var(--tint-color);
         color: var(--bg-main-color);
@@ -439,10 +440,11 @@
     }
 
     .default-button:hover {
-        color: var(--bg-main-color);
-        filter: brightness(80%);
+        /* color: var(--bg-main-color); */
         /* background-color: hsl(from var(--tint-color) h s calc(l*0.8)); */
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Add shadow for emphasis */
+        /* Add shadow for emphasis */
+        /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  */
+        filter: brightness(105%);
     }
 
     div.text-component.description {
@@ -453,13 +455,12 @@
 /* Hide increment and decrement buttons for number input */
 .hide-step-buttons::-webkit-outer-spin-button,
 .hide-step-buttons::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 .hide-step-buttons {
-  -moz-appearance: textfield; /* Firefox */
-
+    -moz-appearance: textfield; /* Firefox */
 }
 
 /* Style for dropdown-dropdown -- these need to be global, not nested because they apply to the portal */
@@ -497,23 +498,24 @@
 
 .thin-scrollbar {
     scrollbar-width: thin;
-    scrollbar-color: #c5c5c5 #f6f6f6;
-  }
-  
-  .thin-scrollbar::-webkit-scrollbar {
-    width: 8px;
-  }
-  
-  .thin-scrollbar::-webkit-scrollbar-track {
-    background: #f6f6f6;
-  }
-  
-  .thin-scrollbar::-webkit-scrollbar-thumb {
-    background-color: #c5c5c5;
-    border-radius: 4px;
-  }
+    /* The following is not yet supported in the NP HTML environment */
+    /* scrollbar-color: var(--bg-alt-color) var(--divider-color); */
+}
 
-  .dropdown-select-dropdiv {
-    max-height: 30vh; 
+.thin-scrollbar::-webkit-scrollbar {
+    width: 8px;
+}
+
+.thin-scrollbar::-webkit-scrollbar-track {
+    background: var(--bg-alt-color);
+}
+
+.thin-scrollbar::-webkit-scrollbar-thumb {
+    background-color: var(--divider-color);
+    border-radius: 4px;
+}
+
+.dropdown-select-dropdiv {
+    max-height: 90vh;
     overflow-y: auto;
-  }
+}
