--- a/jgclark.Reviews/requiredFiles/projectListDialog.css
+++ b/jgclark.Reviews/requiredFiles/projectListDialog.css
@@ -102,7 +102,8 @@ dialog:modal {
 }
 
 .fullTextInput {
-  width: calc(100% - 4rem);
   font-size: 0.85rem;
+  width: calc(100% - 4rem);
   border-radius: 4px;
+  background-color: var(--bg-mid-color);
 }
